--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -9,12 +9,18 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v5
-        
-      - name: Welcome message
-        run: echo "My first GitHub Actions Job"
 
-      - name: List files
-        run: ls
+      - name: Multiple-commands-execution
+        run: |
+             echo "My first GitHub Actions Job"
+             ls -ltra
+             cat README.md
 
-      - name: Read File
-        run: cat README.md
+      -   name: ASCII generator 
+          run: cowsay -f dragon "Run for cover.... I am a dragon ">> dragon.txt 
+
+      # - name: List files
+      # run: ls
+
+      #- name: Read File
+      # run: cat README.md
