Change runner to srivas-VirtualBox for testing job

--- a/.github/workflows/self-hosted-example.yml
+++ b/.github/workflows/self-hosted-example.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   testing:
-    runs-on: [self-hosted, linux, prod]
+    runs-on: [srivas-VirtualBox]
     steps:
       - name: Echo content
         run: |
